@@ -22,6 +22,7 @@ SOURCE_READER ch.ehi.fme.Main \
  VALIDATE "$(VALIDATE)"\
  VALIDATE_MULTIPLICITY "$(VALIDATE_MULTIPLICITY)"\
  VALIDATE_CONFIG "$(VALIDATE_CONFIG)"\
+ ILI1_IGNOREPOLYGONBUILDINGERRORS "$(ILI1_IGNOREPOLYGONBUILDINGERRORS)"\
  ILI1_LINETABLES "$(ILI1_LINETABLES)"\ 
  TRIM_VALUES  "$(TRIM_VALUES)"\
  INHERITANCE_MAPPING  "$(INHERITANCE_MAPPING)"\
@@ -69,7 +70,7 @@ END_SOURCE_PREAMBLE
 
 SOURCE_SETTINGS
 GUI TITLE INTERLIS (ili2fme) Reader Parameters
-GUI GROUP MODELS%MODEL_DIR%TOPICS_FILTER%CHECK_UNIQUEOID%VALIDATE%VALIDATE_MULTIPLICITY%VALIDATE_CONFIG%TRIM_VALUES%GEOMETRY_ENCODING%GEOM_ATTR_MAPPING%ILI1_LINETABLES%INHERITANCE_MAPPING%ILI1_ADDDEFVAL%ILI1_RENUMBERTID%ILI1_ENUMASITFCODE%CREATEFEATURETYPE4ENUM%HTTP_PROXYHOST%HTTP_PROXYPORT%TRACEMSGS Parameters
+GUI GROUP MODELS%MODEL_DIR%TOPICS_FILTER%CHECK_UNIQUEOID%VALIDATE%VALIDATE_MULTIPLICITY%VALIDATE_CONFIG%ILI1_IGNOREPOLYGONBUILDINGERRORS%TRIM_VALUES%GEOMETRY_ENCODING%GEOM_ATTR_MAPPING%ILI1_LINETABLES%INHERITANCE_MAPPING%ILI1_ADDDEFVAL%ILI1_RENUMBERTID%ILI1_ENUMASITFCODE%CREATEFEATURETYPE4ENUM%HTTP_PROXYHOST%HTTP_PROXYPORT%TRACEMSGS Parameters
 DEFAULT_VALUE MODELS "%DATA"
 GUI TEXT MODELS Models:
 DEFAULT_VALUE MODEL_DIR "%XTF_DIR;http://models.interlis.ch/;$(FME_HOME)plugins/interlis2/ilimodels;$(FME_HOME)plugins/interlis2/ili22models"
@@ -84,6 +85,8 @@ DEFAULT_VALUE VALIDATE_MULTIPLICITY "Yes"
 GUI CHOICE VALIDATE_MULTIPLICITY Yes%No Validate Attribute/Role Multiplicity:
 DEFAULT_VALUE VALIDATE_CONFIG ""
 GUI OPTIONAL FILENAME VALIDATE_CONFIG ilivalidator_Configuration_Files(*.ini)|*.ini|All_Files|*.* Validator Configuration:
+DEFAULT_VALUE ILI1_IGNOREPOLYGONBUILDINGERRORS "Yes"
+GUI CHOICE ILI1_IGNOREPOLYGONBUILDINGERRORS Yes%No ITF Ignore Polygon Building Errors:
 DEFAULT_VALUE GEOMETRY_ENCODING "FMEBIN"
 GUI CHOICE GEOMETRY_ENCODING FMEXML%FMEBIN%FMEHEXBIN%OGCHEXBIN Geometry Encoding:
 DEFAULT_VALUE GEOM_ATTR_MAPPING "EncodeAsFmeAttribute"
